# Personal_AI_Agent

./: .gitignore  README.md  ingest.py  logger.py  main.py  prompts.py  pyproject.toml  requirements.txt
data/: profile.txt
